--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,53 +14,8 @@ permissions:
   contents: read
   security-events: write # Required by codeql task.
 
-on:
-  schedule:
-    - cron: '00 21 * * *'
-
-  push:
-    branches:
-      - '*'
-
-  pull_request:
-    branches:
-      - '*'
-
-concurrency:
-  group: main-${{ github.event.pull_request.number || github.sha }}
-  cancel-in-progress: true
-
+on: [workflow_dispatch]
 jobs:
-  windows_release:
-    uses: ./.github/workflows/windows.yml
-    with:
-      platform: windows-2019
-      build_type: RelWithDebInfo
-      upload_packages: true
-
-  windows_debug:
-    uses: ./.github/workflows/windows.yml
-    with:
-      platform: windows-2019
-      build_type: Debug
-      upload_packages: true
-
-  macos_release:
-    uses: ./.github/workflows/posix.yml
-    with:
-      arch: x86_64
-      platform: macos-11
-      build_type: RelWithDebInfo
-      upload_packages: true
-
-  macos_release_coverage:
-    uses: ./.github/workflows/posix.yml
-    with:
-      arch: x86_64
-      platform: macos-11
-      build_type: RelWithDebInfo
-      enable_coverage: true
-
   macos_release_sanitizers:
     uses: ./.github/workflows/posix.yml
     with:
@@ -75,140 +30,3 @@ jobs:
       arch: x86_64
       platform: macos-11
       build_type: Debug
-
-  macos_debug_coverage:
-    uses: ./.github/workflows/posix.yml
-    with:
-      arch: x86_64
-      platform: macos-11
-      build_type: Debug
-      enable_coverage: true
-
-  macos_debug_sanitizers:
-    uses: ./.github/workflows/posix.yml
-    with:
-      arch: x86_64
-      platform: macos-11
-      build_type: Debug
-      enable_sanitizers: true
-
-  linux_release:
-    uses: ./.github/workflows/posix.yml
-    with:
-      arch: x86_64
-      platform: ubuntu-20.04
-      build_type: RelWithDebInfo
-      upload_packages: true
-
-  linux_release_arm64:
-    uses: ./.github/workflows/posix.yml
-    with:
-      arch: arm64
-      platform: ubuntu-20.04
-      build_type: RelWithDebInfo
-
-  linux_release_scan_build:
-    uses: ./.github/workflows/posix.yml
-    with:
-      arch: x86_64
-      platform: ubuntu-20.04
-      build_type: RelWithDebInfo
-      scan_build: true
-
-  linux_release_coverage:
-    uses: ./.github/workflows/posix.yml
-    with:
-      arch: x86_64
-      platform: ubuntu-20.04
-      build_type: RelWithDebInfo
-      enable_coverage: true
-
-  linux_release_arm64_coverage:
-    uses: ./.github/workflows/posix.yml
-    with:
-      arch: arm64
-      platform: ubuntu-20.04
-      build_type: RelWithDebInfo
-      enable_coverage: true
-
-  linux_release_sanitizers:
-    uses: ./.github/workflows/posix.yml
-    with:
-      arch: x86_64
-      platform: ubuntu-20.04
-      build_type: RelWithDebInfo
-      enable_sanitizers: true
-
-  # Disabled until https://github.com/iovisor/ubpf/issues/155 is resolved.
-  # linux_release_arm64_sanitizers:
-  #   uses: ./.github/workflows/posix.yml
-  #   with:
-  #     arch: arm64
-  #     platform: ubuntu-20.04
-  #     build_type: RelWithDebInfo
-  #     enable_sanitizers: true
-
-  linux_debug:
-    uses: ./.github/workflows/posix.yml
-    with:
-      arch: x86_64
-      platform: ubuntu-20.04
-      build_type: Debug
-
-  linux_debug_arm64:
-    uses: ./.github/workflows/posix.yml
-    with:
-      arch: arm64
-      platform: ubuntu-20.04
-      build_type: Debug
-      upload_packages: true
-
-  linux_debug_coverage:
-    uses: ./.github/workflows/posix.yml
-    with:
-      arch: x86_64
-      platform: ubuntu-20.04
-      build_type: Debug
-      enable_coverage: true
-
-  linux_debug_arm64_coverage:
-    uses: ./.github/workflows/posix.yml
-    with:
-      arch: arm64
-      platform: ubuntu-20.04
-      build_type: Debug
-      enable_coverage: true
-
-  linux_debug_sanitizers:
-    uses: ./.github/workflows/posix.yml
-    with:
-      arch: x86_64
-      platform: ubuntu-20.04
-      build_type: Debug
-      enable_sanitizers: true
-
-  # Disabled until https://github.com/iovisor/ubpf/issues/155 is resolved.
-  # linux_debug_arm64_sanitizers:
-  #   uses: ./.github/workflows/posix.yml
-  #   with:
-  #     arch: arm64
-  #     platform: ubuntu-20.04
-  #     build_type: Debug
-  #     enable_sanitizers: true
-
-  finish:
-    needs:
-      - macos_release_coverage
-      - macos_debug_coverage
-      - linux_release_coverage
-      - linux_debug_coverage
-      - linux_release_arm64_coverage
-      - linux_debug_arm64_coverage
-
-    runs-on: ubuntu-20.04
-    steps:
-    - name: Coveralls Finished
-      uses: coverallsapp/github-action@v2.1.2
-      with:
-        github-token: ${{ secrets.github_token }}
-        parallel-finished: true
