fixup! Initial wasm commit.
Get to the point where tests almost all pass.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,13 +27,20 @@ add_subdirectory("vm")
 				BINARY_DIR ${CMAKE_BINARY_DIR}/external/bpf_conformance
         EXCLUDE_FROM_ALL true
         STEP_TARGETS build)
+if (PLATFORM_WASM)
+add_subdirectory("wasm")
+endif()
 
 if(UBPF_ENABLE_TESTS)
   add_subdirectory("ubpf_plugin")
   if (NOT UBPF_SKIP_EXTERNAL)
   endif()
   add_subdirectory("bpf")
-  add_subdirectory("aarch64_test")
+  if(PLATFORM_WASM)
+    add_subdirectory("wasm_test")
+  else()
+    add_subdirectory("aarch64_test")
+  endif()
 endif()
 
 if(UBPF_ENABLE_PACKAGE)
