--- a/ubpf_plugin/CMakeLists.txt
+++ b/ubpf_plugin/CMakeLists.txt
@@ -11,25 +11,27 @@ set(CMAKE_CXX_STANDARD 20)
 file(COPY ${CMAKE_SOURCE_DIR}/tests DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
 
 if(NOT PLATFORM_WASM)
-add_executable(
-    ubpf_plugin
-    ubpf_plugin.cc
-)
+    add_executable(
+        ubpf_plugin
+        ubpf_plugin.cc
+    )
 
-add_dependencies(ubpf_plugin Conformance-build)
+    add_dependencies(ubpf_plugin Conformance-build)
 
-target_include_directories("ubpf_plugin" PRIVATE
-    "${CMAKE_SOURCE_DIR}/vm"
-    "${CMAKE_BINARY_DIR}/vm"
-    "${CMAKE_SOURCE_DIR}/vm/inc"
-    "${CMAKE_BINARY_DIR}/vm/inc"
-)
+    target_include_directories("ubpf_plugin" PRIVATE
+        "${CMAKE_SOURCE_DIR}/vm"
+        "${CMAKE_BINARY_DIR}/vm"
+        "${CMAKE_SOURCE_DIR}/vm/inc"
+        "${CMAKE_BINARY_DIR}/vm/inc"
+    )
 
-target_link_libraries(
-    ubpf_plugin
-    ubpf
-    ubpf_settings
-)
+    target_link_libraries(
+        ubpf_plugin
+        ubpf
+        ubpf_settings
+    )
+else()
+    add_dependencies(ubpf_lib Conformance-build)
 endif()
 
 file(GLOB external_files ${CMAKE_SOURCE_DIR}/external/bpf_conformance/tests/*.data)
