--- a/.github/workflows/wasm.yml
+++ b/.github/workflows/wasm.yml
@@ -59,8 +59,6 @@ jobs:
           libboost-filesystem-dev \
           npm \
           libelf-dev
-    - name: Setup tmate session
-      uses: mxschmitt/action-tmate@v3
 
     - name: Build/install emsdk
       run: ./.github/scripts/build-wasm.sh
@@ -69,7 +67,6 @@ jobs:
     - name: Configure uBPF
       run: |
         arch_flags="-DCMAKE_TOOLCHAIN_FILE=/usr/emsdk/upstream/emscripten/cmake/Modules/Platform/Emscripten.cmake"
-
         ${command_prefix} cmake \
           -G Ninja \
           -S . \
@@ -86,6 +83,8 @@ jobs:
 
     - name: Run the CTest suite
       run: |
+        PATH=/home/runner/.deno/bin/:${PATH}
+        export PATH
         ${command_prefix} cmake \
           --build build \
           --target test
