--- a/wasm/CMakeLists.txt
+++ b/wasm/CMakeLists.txt
@@ -24,4 +24,5 @@ target_link_options("ubpf_lib" PRIVATE "SHELL:-s STANDALONE_WASM=1"  "SHELL:-s E
 
 add_custom_command(OUTPUT ${CMAKE_BINARY_DIR}/bin/main.ts COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/wasm/main.ts ${CMAKE_BINARY_DIR}/bin/main.ts DEPENDS ${CMAKE_SOURCE_DIR}/wasm/main.ts)
 add_custom_command(OUTPUT ${CMAKE_BINARY_DIR}/bin/ubpf.ts COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/wasm/ubpf.ts ${CMAKE_BINARY_DIR}/bin/ubpf.ts DEPENDS ${CMAKE_SOURCE_DIR}/wasm/ubpf.ts)
-add_custom_target(wasm-wrappers ALL DEPENDS ${CMAKE_BINARY_DIR}/bin/main.ts ${CMAKE_BINARY_DIR}/bin/ubpf.ts)
+add_custom_command(OUTPUT ${CMAKE_BINARY_DIR}/bin/ubpf_utils.ts COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/wasm/ubpf_utils.ts ${CMAKE_BINARY_DIR}/bin/ubpf_utils.ts DEPENDS ${CMAKE_SOURCE_DIR}/wasm/ubpf_utils.ts)
+add_custom_target(wasm-wrappers ALL DEPENDS ${CMAKE_BINARY_DIR}/bin/main.ts ${CMAKE_BINARY_DIR}/bin/ubpf.ts ${CMAKE_BINARY_DIR}/bin/ubpf_utils.ts)
