fixup! Initial wasm commit.
Major refactor (and add doc generation - yaya).

Signed-off-by: Will Hawkins <hawkinsw@obs.cr>

--- a/wasm/CMakeLists.txt
+++ b/wasm/CMakeLists.txt
@@ -22,7 +22,11 @@ target_link_libraries(
 )
 target_link_options("ubpf_lib" PRIVATE "SHELL:-s STANDALONE_WASM=1"  "SHELL:-s EXPORTED_FUNCTIONS='[_malloc]'" "SHELL:-s RESERVED_FUNCTION_POINTERS=1" -Wl,--no-entry)
 
-add_custom_command(OUTPUT ${CMAKE_BINARY_DIR}/bin/main.ts COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/wasm/main.ts ${CMAKE_BINARY_DIR}/bin/main.ts DEPENDS ${CMAKE_SOURCE_DIR}/wasm/main.ts)
-add_custom_command(OUTPUT ${CMAKE_BINARY_DIR}/bin/ubpf.ts COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/wasm/ubpf.ts ${CMAKE_BINARY_DIR}/bin/ubpf.ts DEPENDS ${CMAKE_SOURCE_DIR}/wasm/ubpf.ts)
-add_custom_command(OUTPUT ${CMAKE_BINARY_DIR}/bin/ubpf_utils.ts COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/wasm/ubpf_utils.ts ${CMAKE_BINARY_DIR}/bin/ubpf_utils.ts DEPENDS ${CMAKE_SOURCE_DIR}/wasm/ubpf_utils.ts)
-add_custom_target(wasm-wrappers ALL DEPENDS ${CMAKE_BINARY_DIR}/bin/main.ts ${CMAKE_BINARY_DIR}/bin/ubpf.ts ${CMAKE_BINARY_DIR}/bin/ubpf_utils.ts)
+set(ts_source_files "main.ts" "ubpf.ts" "ubpf_utils.ts" "ubpf_types.ts")
+set(ts_outputs)
+foreach(ts_file ${ts_source_files})
+    add_custom_command(OUTPUT ${CMAKE_BINARY_DIR}/bin/${ts_file} COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/wasm/${ts_file} ${CMAKE_BINARY_DIR}/bin/${ts_file} DEPENDS ${CMAKE_SOURCE_DIR}/wasm/${ts_file})
+    list(APPEND ts_outputs ${CMAKE_BINARY_DIR}/bin/${ts_file})
+endforeach()
+add_custom_command(OUTPUT ${CMAKE_BINARY_DIR}/wasm_docs/ COMMAND npx typedoc --skipErrorChecking --out ${CMAKE_BINARY_DIR}/wasm_docs/ ${ts_source_files} WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/wasm DEPENDS ${ts_outputs})
+add_custom_target(wasm-wrappers ALL DEPENDS ${ts_outputs} ${CMAKE_BINARY_DIR}/wasm_docs/)
