--- a/wasm/package.json
+++ b/wasm/package.json
@@ -6,6 +6,7 @@
     "prettier": "3.0.3",
     "ts-loader": "^9.4.4",
     "typescript": "^5.2.2",
+    "typedoc": "^0.25.4",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   },
